updates and heroku
